cmake_minimum_required(VERSION 3.8.2)

project(DinoDent)

# Find includes in the build directories
set(CMAKE_INCLUDE_CURRENT_DIR ON)

# Turn on automatic invocation of the MOC, UIC & RCC
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)

#Remove the comment below and enter qt directory as shown:
set(CMAKE_PREFIX_PATH C:/Dev/Qt/6.3.1/msvc2019_64)

# Add a compiler flag
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")

# Make this a GUI application on Windows
if(WIN32)
  set(CMAKE_WIN32_EXECUTABLE ON)
endif()

#set(CMAKE_CXX_STANDARD 20)
#set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 REQUIRED COMPONENTS 
	Qml
	Widgets
	Network
	Gui
	PrintSupport
	Core
	Core5Compat
)


add_library(sqlite3 STATIC
	include/sqlite3/sqlite3.h
	include/sqlite3/sqlite3ext.h
	include/sqlite3/shell.c
	include/sqlite3/sqlite3.c

)

add_library(
	JsonCpp STATIC 
	include/JsonCpp/json.h
	include/JsonCpp/jsoncpp.cpp
	include/JsonCpp/json-forwards.h
)


add_library(
	TinyXML STATIC
	include/TinyXML/tinyxml.h
	include/TinyXML/tinystr.h
	include/TinyXML/tinystr.cpp
	include/TinyXML/tinyxml.cpp
	include/TinyXML/tinyxmlerror.cpp
	include/TinyXML/tinyxmlparser.cpp
)

set(SOURCES
src\main.cpp
src\Path.cpp
src\Path.h
src\QtVersion.h
src\Resources.cpp
src\Resources.h
src\Version.h
src\Database\Database.cpp
src\Database\Database.h
src\Database\DbAmbList.cpp
src\Database\DbAmbList.h
src\Database\DbBrowser.cpp
src\Database\DbBrowser.h
src\Database\DbDoctor.cpp
src\Database\DbDoctor.h
src\Database\DbFiscalReceipt.cpp
src\Database\DbFiscalReceipt.h
src\Database\DbInvoice.cpp
src\Database\DbInvoice.h
src\Database\DbNotes.cpp
src\Database\DbNotes.h
src\Database\DbPatient.cpp
src\Database\DbPatient.h
src\Database\DbPatientSummary.cpp
src\Database\DbPatientSummary.h
src\Database\DbPerio.cpp
src\Database\DbPerio.h
src\Database\DbPractice.cpp
src\Database\DbPractice.h
src\Database\DbPrescription.cpp
src\Database\DbPrescription.h
src\Database\DbProcedure.cpp
src\Database\DbProcedure.h
src\Database\DbReferral.cpp
src\Database\DbReferral.h
src\Database\DbStatistics.cpp
src\Database\DbStatistics.h
src\Database\DbUpdateStatus.cpp
src\Database\DbUpdateStatus.h
src\DbUpdates\DbUpdates.cpp
src\DbUpdates\DbUpdates.h
src\DbUpdates\Update10.cpp
src\DbUpdates\Update11.cpp
src\DbUpdates\Update12.cpp
src\DbUpdates\Update5.cpp
src\DbUpdates\Update6.cpp
src\DbUpdates\Update7.cpp
src\DbUpdates\Update8.cpp
src\DbUpdates\Update9.cpp
src\DbUpdates\Updater.cpp
src\DbUpdates\Updater.h
src\Model\Date.cpp
src\Model\Date.h
src\Model\DynamicNum.h
src\Model\Ekatte.cpp
src\Model\Ekatte.h
src\Model\FreeFunctions.cpp
src\Model\FreeFunctions.h
src\Model\InsuranceStatus.cpp
src\Model\InsuranceStatus.h
src\Model\MedicalStatuses.h
src\Model\NumenclatureTemplate.h
src\Model\Parser.cpp
src\Model\Parser.h
src\Model\Patient.cpp
src\Model\Patient.h
src\Model\Settings.h
src\Model\Specialty.cpp
src\Model\Specialty.h
src\Model\TableRows.h
src\Model\TableStructs.h
src\Model\Time.cpp
src\Model\Time.h
src\Model\User.cpp
src\Model\User.h
src\Model\UserStructs.h
src\Model\xml.cpp
src\Model\xml.h
src\Model\Dental\AmbList.h
src\Model\Dental\BridgeAlgorithms.h
src\Model\Dental\DentalNum.cpp
src\Model\Dental\DentalNum.h
src\Model\Dental\DentalStatistics.h
src\Model\Dental\Diagnosis.cpp
src\Model\Dental\Diagnosis.h
src\Model\Dental\Enums.h
src\Model\Dental\KSMP.cpp
src\Model\Dental\KSMP.h
src\Model\Dental\MKB.cpp
src\Model\Dental\MKB.h
src\Model\Dental\MonthNotifRow.h
src\Model\Dental\NhifMaps.h
src\Model\Dental\NhifProcedures.cpp
src\Model\Dental\NhifProcedures.h
src\Model\Dental\NhifSheetData.cpp
src\Model\Dental\NhifSheetData.h
src\Model\Dental\PackageCounter.cpp
src\Model\Dental\PackageCounter.h
src\Model\Dental\PerioStatistic.cpp
src\Model\Dental\PerioStatistic.h
src\Model\Dental\PerioStatus.h
src\Model\Dental\PerioToothData.cpp
src\Model\Dental\PerioToothData.h
src\Model\Dental\Procedure.cpp
src\Model\Dental\Procedure.h
src\Model\Dental\ProcedureCode.cpp
src\Model\Dental\ProcedureCode.h
src\Model\Dental\ProcedureContainer.cpp
src\Model\Dental\ProcedureContainer.h
src\Model\Dental\ProcedureListElement.h
src\Model\Dental\ReportFile.h
src\Model\Dental\Status.cpp
src\Model\Dental\Status.h
src\Model\Dental\StatusData.cpp
src\Model\Dental\StatusData.h
src\Model\Dental\SurfStatus.h
src\Model\Dental\TimeFrame.cpp
src\Model\Dental\TimeFrame.h
src\Model\Dental\Tooth.cpp
src\Model\Dental\Tooth.h
src\Model\Dental\ToothContainer.cpp
src\Model\Dental\ToothContainer.h
src\Model\Dental\ToothIndex.cpp
src\Model\Dental\ToothIndex.h
src\Model\Dental\ToothUtils.cpp
src\Model\Dental\ToothUtils.h
src\Model\Dental\VitaColor.cpp
src\Model\Dental\VitaColor.h
src\Model\Financial\BusinessOperation.cpp
src\Model\Financial\BusinessOperation.h
src\Model\Financial\FinancialEnums.h
src\Model\Financial\FiscalReceipt.h
src\Model\Financial\Invoice.cpp
src\Model\Financial\Invoice.h
src\Model\Financial\Issuer.cpp
src\Model\Financial\Issuer.h
src\Model\Financial\MonthNotifRow.h
src\Model\Financial\NhifInvoiceData.cpp
src\Model\Financial\NhifInvoiceData.h
src\Model\Financial\Recipient.cpp
src\Model\Financial\Recipient.h
src\Model\Prescription\Dispensation.h
src\Model\Prescription\Dosage.cpp
src\Model\Prescription\Dosage.h
src\Model\Prescription\DoseQuantity.cpp
src\Model\Prescription\DoseQuantity.h
src\Model\Prescription\Medication.cpp
src\Model\Prescription\Medication.h
src\Model\Prescription\Prescription.cpp
src\Model\Prescription\Prescription.h
src\Model\Prescription\Route.cpp
src\Model\Prescription\Route.h
src\Model\Prescription\TimeLapse.cpp
src\Model\Prescription\TimeLapse.h
src\Model\Prescription\WhenToTake.cpp
src\Model\Prescription\WhenToTake.h
src\Model\Referrals\NumberVariant.h
src\Model\Referrals\Referral.cpp
src\Model\Referrals\Referral.h
src\Model\Referrals\ReferralData.h
src\Model\Referrals\RefNum.cpp
src\Model\Referrals\RefNum.h
src\Model\Validators\AbstractValidator.h
src\Model\Validators\AmbListValidator.cpp
src\Model\Validators\AmbListValidator.h
src\Model\Validators\BulstatValidator.cpp
src\Model\Validators\BulstatValidator.h
src\Model\Validators\CommonValidators.cpp
src\Model\Validators\CommonValidators.h
src\Model\Validators\DateValidator.cpp
src\Model\Validators\DateValidator.h
src\Model\Validators\LpkValidator.cpp
src\Model\Validators\LpkValidator.h
src\Model\Validators\NameValidator.cpp
src\Model\Validators\NameValidator.h
src\Model\Validators\NzokContractValidator.cpp
src\Model\Validators\NzokContractValidator.h
src\Model\Validators\PatientValidators.cpp
src\Model\Validators\PatientValidators.h
src\Model\Validators\PrescriptionValidators.cpp
src\Model\Validators\PrescriptionValidators.h
src\Model\Validators\ProcedureDateValidator.cpp
src\Model\Validators\ProcedureDateValidator.h
src\Model\Validators\ProcedureValidators.cpp
src\Model\Validators\ProcedureValidators.h
src\Model\Validators\RziValidaor.cpp
src\Model\Validators\RziValidaor.h
src\Model\Validators\RziValidator.cpp
src\Network\AbstractReplyHandler.cpp
src\Network\AbstractReplyHandler.h
src\Network\Base64Convert.cpp
src\Network\Base64Convert.h
src\Network\DynamicNumenclatures.h
src\Network\NetworkManager.cpp
src\Network\NetworkManager.h
src\Network\PKCS11.cpp
src\Network\PKCS11.h
src\Network\XmlSigner.cpp
src\Network\XmlSigner.h
src\Network\HIS\EDental.cpp
src\Network\HIS\EDental.h
src\Network\HIS\EPrescription.cpp
src\Network\HIS\EPrescription.h
src\Network\HIS\EReferral.cpp
src\Network\HIS\EReferral.h
src\Network\HIS\GetNumenclature.cpp
src\Network\HIS\GetNumenclature.h
src\Network\HIS\HisService.cpp
src\Network\HIS\HisService.h
src\Network\HIS\HisToken.cpp
src\Network\HIS\HisToken.h
src\Network\HIS\UpdateMedications.cpp
src\Network\HIS\UpdateMedications.h
src\Network\HIS\UpdateMkb.cpp
src\Network\HIS\UpdateMkb.h
src\Network\NRA\NraStatusService.cpp
src\Network\NRA\NraStatusService.h
src\Network\NRA\NssiPentionService.cpp
src\Network\NRA\NssiPentionService.h
src\Network\PIS\DentalActivitiesService.cpp
src\Network\PIS\DentalActivitiesService.h
src\Network\PIS\DiagnosisService.cpp
src\Network\PIS\DiagnosisService.h
src\Network\PIS\GetHirbnoService.cpp
src\Network\PIS\GetHirbnoService.h
src\Network\PIS\GetMonthNotifListService.cpp
src\Network\PIS\GetMonthNotifListService.h
src\Network\PIS\GetMonthNotifService.cpp
src\Network\PIS\GetMonthNotifService.h
src\Network\PIS\PisService.cpp
src\Network\PIS\PisService.h
src\Network\PIS\ReportFilesService.cpp
src\Network\PIS\ReportFilesService.h
src\Network\PIS\SendFileService.cpp
src\Network\PIS\SendFileService.h
src\Network\UpdateService\UpdateService.cpp
src\Network\UpdateService\UpdateService.h
src\Presenter\BrowserPresenter.cpp
src\Presenter\BrowserPresenter.h
src\Presenter\ButtonSurfaceMatrix.cpp
src\Presenter\ButtonSurfaceMatrix.h
src\Presenter\CheckModel.cpp
src\Presenter\CheckModel.h
src\Presenter\DetailedStatusPresenter.cpp
src\Presenter\DetailedStatusPresenter.h
src\Presenter\DoctorDialogPresenter.cpp
src\Presenter\DoctorDialogPresenter.h
src\Presenter\DosagePresenter.cpp
src\Presenter\DosagePresenter.h
src\Presenter\FinancialPresenter.cpp
src\Presenter\FinancialPresenter.h
src\Presenter\FiscalReceiptPresenter.cpp
src\Presenter\FiscalReceiptPresenter.h
src\Presenter\FiscalReportPresenter.cpp
src\Presenter\FiscalReportPresenter.h
src\Presenter\InputEnums.h
src\Presenter\ListPresenter.cpp
src\Presenter\ListPresenter.h
src\Presenter\LoginPresenter.cpp
src\Presenter\LoginPresenter.h
src\Presenter\MainPresenter.cpp
src\Presenter\MainPresenter.h
src\Presenter\MedicationPresenter.cpp
src\Presenter\MedicationPresenter.h
src\Presenter\MonthNotifPresenter.cpp
src\Presenter\MonthNotifPresenter.h
src\Presenter\PatientDialogPresenter.cpp
src\Presenter\PatientDialogPresenter.h
src\Presenter\PatientInfoPresenter.cpp
src\Presenter\PatientInfoPresenter.h
src\Presenter\PatientSummaryPresenter.cpp
src\Presenter\PatientSummaryPresenter.h
src\Presenter\PerioPresenter.cpp
src\Presenter\PerioPresenter.h
src\Presenter\PracticeDialogPresenter.cpp
src\Presenter\PracticeDialogPresenter.h
src\Presenter\PracticeManagerPresenter.cpp
src\Presenter\PracticeManagerPresenter.h
src\Presenter\PracticeSettingsPresenter.cpp
src\Presenter\PracticeSettingsPresenter.h
src\Presenter\PrescriptionPresenter.cpp
src\Presenter\PrescriptionPresenter.h
src\Presenter\ProcedureCreator.cpp
src\Presenter\ProcedureCreator.h
src\Presenter\ProcedureDialogPresenter.cpp
src\Presenter\ProcedureDialogPresenter.h
src\Presenter\ProcedureEditorPresenter.cpp
src\Presenter\ProcedureEditorPresenter.h
src\Presenter\ProcedureHistoryPresenter.cpp
src\Presenter\ProcedureHistoryPresenter.h
src\Presenter\ReferralPresenter.cpp
src\Presenter\ReferralPresenter.h
src\Presenter\ReportFilesPresenter.cpp
src\Presenter\ReportFilesPresenter.h
src\Presenter\ReportPresenter.cpp
src\Presenter\ReportPresenter.h
src\Presenter\SettingsMainPresenter.cpp
src\Presenter\SettingsMainPresenter.h
src\Presenter\StatisticDialogPresenter.cpp
src\Presenter\StatisticDialogPresenter.h
src\Presenter\SurfacePanelPresenter.cpp
src\Presenter\SurfacePanelPresenter.h
src\Presenter\TabInstance.cpp
src\Presenter\TabInstance.h
src\Presenter\TabPresenter.cpp
src\Presenter\TabPresenter.h
src\View\GlobalFunctions.cpp
src\View\GlobalFunctions.h
src\View\ModalDialogBuilder.cpp
src\View\ModalDialogBuilder.h
src\View\Printer.cpp
src\View\Printer.h
src\View\Theme.cpp
src\View\Theme.h
src\View\Graphics\ControlPanelPolygon.cpp
src\View\Graphics\ControlPanelPolygon.h
src\View\Graphics\CPTooth.cpp
src\View\Graphics\CPTooth.h
src\View\Graphics\GraphicsView.cpp
src\View\Graphics\GraphicsView.h
src\View\Graphics\HexagonGraphicsItem.cpp
src\View\Graphics\HexagonGraphicsItem.h
src\View\Graphics\PaintHint.cpp
src\View\Graphics\PaintHint.h
src\View\Graphics\PerioChartItem.cpp
src\View\Graphics\PerioChartItem.h
src\View\Graphics\PerioGraphicsButton.cpp
src\View\Graphics\PerioGraphicsButton.h
src\View\Graphics\PerioScene.cpp
src\View\Graphics\PerioScene.h
src\View\Graphics\SelectionBox.cpp
src\View\Graphics\SelectionBox.h
src\View\Graphics\SpriteRect.cpp
src\View\Graphics\SpriteRect.h
src\View\Graphics\SpriteSheets.cpp
src\View\Graphics\SpriteSheets.h
src\View\Graphics\TeethBuccalScene.cpp
src\View\Graphics\TeethBuccalScene.h
src\View\Graphics\TeethLingualScene.cpp
src\View\Graphics\TeethLingualScene.h
src\View\Graphics\TeethViewScene.cpp
src\View\Graphics\TeethViewScene.h
src\View\Graphics\ToothGraphicsItem.cpp
src\View\Graphics\ToothGraphicsItem.h
src\View\Graphics\ToothPainter.cpp
src\View\Graphics\ToothPainter.h
src\View\Graphics\ToothSprite.h
src\View\Graphics\Zodiac.cpp
src\View\Graphics\Zodiac.h
src\View\Interfaces\AbstractComboBox.h
src\View\Interfaces\AbstractDateEdit.cpp
src\View\Interfaces\AbstractDateEdit.h
src\View\Interfaces\AbstractLabel.h
src\View\Interfaces\AbstractLineEdit.cpp
src\View\Interfaces\AbstractLineEdit.h
src\View\Interfaces\AbstractRangeEdit.h
src\View\Interfaces\AbstractSpinBox.h
src\View\Interfaces\AbstractSurfaceSelector.h
src\View\Interfaces\AbstractUIElement.cpp
src\View\Interfaces\AbstractUIElement.h
src\View\Interfaces\IAllergiesDialog.h
src\View\Interfaces\IBrowserDialog.h
src\View\Interfaces\ICrownView.h
src\View\Interfaces\IDetailedStatusView.h
src\View\Interfaces\IDoctorSettingsDialog.h
src\View\Interfaces\IDosageDialog.h
src\View\Interfaces\IFinancialView.h
src\View\Interfaces\IFiscalReceiptDialog.h
src\View\Interfaces\IFiscalReportView.h
src\View\Interfaces\IImplantView.h
src\View\Interfaces\IListView.h
src\View\Interfaces\ILoginView.h
src\View\Interfaces\IMainView.h
src\View\Interfaces\IMedicationDialog.h
src\View\Interfaces\IMonthNotifView.h
src\View\Interfaces\IObturationView.h
src\View\Interfaces\IPacticeSettings.h
src\View\Interfaces\IPatientDialog.h
src\View\Interfaces\IPatientSummaryView.h
src\View\Interfaces\IPatientTileInfo.h
src\View\Interfaces\IPerioView.h
src\View\Interfaces\IPracticeDialog.h
src\View\Interfaces\IPracticeDoctorSettings.h
src\View\Interfaces\IPracticeSelectorView.h
src\View\Interfaces\IPrescriptionView.h
src\View\Interfaces\IProcedureDialog.h
src\View\Interfaces\IProcedureEditDialog.h
src\View\Interfaces\IProcedureHistoryDialog.h
src\View\Interfaces\IProcedureInput.h
src\View\Interfaces\IReferralDialog.h
src\View\Interfaces\IReportFilesView.h
src\View\Interfaces\IReportView.h
src\View\Interfaces\ISettingsDialog.h
src\View\Interfaces\IStatisticDialogView.h
src\View\Interfaces\ISurfacePanel.h
src\View\Interfaces\ITabView.cpp
src\View\Interfaces\ITabView.h
src\View\SubWidgets\ContextMenu.cpp
src\View\SubWidgets\ContextMenu.h
src\View\SubWidgets\ControlPanel.cpp
src\View\SubWidgets\ControlPanel.h
src\View\SubWidgets\ControlPanel.ui
src\View\SubWidgets\DsnMenu.cpp
src\View\SubWidgets\DsnMenu.h
src\View\SubWidgets\MedicalStatusWidget.cpp
src\View\SubWidgets\MedicalStatusWidget.h
src\View\SubWidgets\MedicalStatusWidget.ui
src\View\SubWidgets\PatientTileInfo.cpp
src\View\SubWidgets\PatientTileInfo.h
src\View\SubWidgets\PatientTileInfo.ui
src\View\SubWidgets\PerioStatisticView.cpp
src\View\SubWidgets\PerioStatisticView.h
src\View\SubWidgets\PerioStatisticView.ui
src\View\SubWidgets\ProcedureInput.cpp
src\View\SubWidgets\ProcedureInput.h
src\View\SubWidgets\ProcedureInput.ui
src\View\SubWidgets\RangeWidget.cpp
src\View\SubWidgets\RangeWidget.h
src\View\SubWidgets\RangeWidget.ui
src\View\SubWidgets\ReferralTile.cpp
src\View\SubWidgets\ReferralTile.h
src\View\SubWidgets\ReferralTile.ui
src\View\SubWidgets\SurfacePanel.cpp
src\View\SubWidgets\SurfacePanel.h
src\View\SubWidgets\SurfacePanel.ui
src\View\SubWidgets\SurfaceSelector.cpp
src\View\SubWidgets\SurfaceSelector.h
src\View\SubWidgets\SurfaceSelector.ui
src\View\SubWidgets\TabTitle.cpp
src\View\SubWidgets\TabTitle.h
src\View\SubWidgets\TabTitle.ui
src\View\SubWidgets\VitaWidget.cpp
src\View\SubWidgets\VitaWidget.h
src\View\SubWidgets\VitaWidget.ui
src\View\TableModels\AmbListTableModel.cpp
src\View\TableModels\AmbListTableModel.h
src\View\TableModels\BusinessOperationModel.cpp
src\View\TableModels\BusinessOperationModel.h
src\View\TableModels\FinancialTableModel.cpp
src\View\TableModels\FinancialTableModel.h
src\View\TableModels\FiscalReceiptTableModel.cpp
src\View\TableModels\FiscalReceiptTableModel.h
src\View\TableModels\KSMPModel.cpp
src\View\TableModels\KSMPModel.h
src\View\TableModels\MedicationTableModel.cpp
src\View\TableModels\MedicationTableModel.h
src\View\TableModels\MKBModel.cpp
src\View\TableModels\MKBModel.h
src\View\TableModels\MonthNotifTableModel.cpp
src\View\TableModels\MonthNotifTableModel.h
src\View\TableModels\PatientTableModel.cpp
src\View\TableModels\PatientTableModel.h
src\View\TableModels\PerioTableModel.cpp
src\View\TableModels\PerioTableModel.h
src\View\TableModels\PrescriptionTableModel.cpp
src\View\TableModels\PrescriptionTableModel.h
src\View\TableModels\ProcedureCodeModel.cpp
src\View\TableModels\ProcedureCodeModel.h
src\View\TableModels\ProcedureSelectModel.cpp
src\View\TableModels\ProcedureSelectModel.h
src\View\TableModels\ProcedureTableModel.cpp
src\View\TableModels\ProcedureTableModel.h
src\View\TableModels\ProcedureTemplateModel.cpp
src\View\TableModels\ProcedureTemplateModel.h
src\View\TableModels\QProcedure.cpp
src\View\TableModels\QProcedure.h
src\View\TableModels\ReportFilesModel.cpp
src\View\TableModels\ReportFilesModel.h
src\View\TableModels\SpecialtyTableModel.cpp
src\View\TableModels\SpecialtyTableModel.h
src\View\TableModels\StatisticTableModel.cpp
src\View\TableModels\StatisticTableModel.h
src\View\uiComponents\AutoCompleteLineEdit.cpp
src\View\uiComponents\AutoCompleteLineEdit.h
src\View\uiComponents\ComboBox.cpp
src\View\uiComponents\ComboBox.h
src\View\uiComponents\CustomButton.cpp
src\View\uiComponents\CustomButton.h
src\View\uiComponents\CustomDateEdit.cpp
src\View\uiComponents\customdateedit.h
src\View\uiComponents\CustomDateTimeEdit.cpp
src\View\uiComponents\CustomDateTimeEdit.h
src\View\uiComponents\DateEdit.cpp
src\View\uiComponents\DateEdit.h
src\View\uiComponents\FinancialTileButton.cpp
src\View\uiComponents\FinancialTileButton.h
src\View\uiComponents\FurcationWidget.cpp
src\View\uiComponents\FurcationWidget.h
src\View\uiComponents\HalfRoundedButton.cpp
src\View\uiComponents\HalfRoundedButton.h
src\View\uiComponents\HoverButton.cpp
src\View\uiComponents\HoverButton.h
src\View\uiComponents\IconButton.cpp
src\View\uiComponents\IconButton.h
src\View\uiComponents\LeadingZeroSpinBox.cpp
src\View\uiComponents\LeadingZeroSpinBox.h
src\View\uiComponents\LineEdit.cpp
src\View\uiComponents\LineEdit.h
src\View\uiComponents\ListTable.cpp
src\View\uiComponents\ListTable.h
src\View\uiComponents\MouseWheelGuard.h
src\View\uiComponents\NameEdit.cpp
src\View\uiComponents\NameEdit.h
src\View\uiComponents\PerioButton.cpp
src\View\uiComponents\PerioButton.h
src\View\uiComponents\PerioSpinBox.cpp
src\View\uiComponents\PerioSpinBox.h
src\View\uiComponents\PerioStateButton.cpp
src\View\uiComponents\PerioStateButton.h
src\View\uiComponents\PerioTable.cpp
src\View\uiComponents\PerioTable.h
src\View\uiComponents\PixmapLabel.cpp
src\View\uiComponents\PixmapLabel.h
src\View\uiComponents\RightClickButton.cpp
src\View\uiComponents\RightClickButton.h
src\View\uiComponents\ShortcutTile.cpp
src\View\uiComponents\ShortcutTile.h
src\View\uiComponents\SpinBox.cpp
src\View\uiComponents\SpinBox.h
src\View\uiComponents\StatusButton.cpp
src\View\uiComponents\StatusButton.h
src\View\uiComponents\StatusMultiButton.cpp
src\View\uiComponents\StatusMultiButton.h
src\View\uiComponents\TableView.cpp
src\View\uiComponents\TableView.h
src\View\uiComponents\TextBrowser.cpp
src\View\uiComponents\TextBrowser.h
src\View\uiComponents\TextEdit.cpp
src\View\uiComponents\TextEdit.h
src\View\uiComponents\TileButton.cpp
src\View\uiComponents\TileButton.h
src\View\uiComponents\ToothButton.cpp
src\View\uiComponents\ToothButton.h
src\View\uiComponents\UserButton.cpp
src\View\uiComponents\UserButton.h
src\View\Widgets\AboutDialog.cpp
src\View\Widgets\AboutDialog.h
src\View\Widgets\AboutDialog.ui
src\View\Widgets\BrowserDialog.cpp
src\View\Widgets\BrowserDialog.h
src\View\Widgets\BrowserDialog.ui
src\View\Widgets\BusinessOperationDialog.cpp
src\View\Widgets\BusinessOperationDialog.h
src\View\Widgets\BusinessOperationDialog.ui
src\View\Widgets\ButtonDialog.cpp
src\View\Widgets\ButtonDialog.h
src\View\Widgets\ButtonDialog.ui
src\View\Widgets\DetailedStatus.cpp
src\View\Widgets\DetailedStatus.h
src\View\Widgets\DetailedStatus.ui
src\View\Widgets\DinoDent.cpp
src\View\Widgets\DinoDent.h
src\View\Widgets\DinoDent.ui
src\View\Widgets\DoctorSettingsDialog.cpp
src\View\Widgets\DoctorSettingsDialog.h
src\View\Widgets\DoctorSettingsDialog.ui
src\View\Widgets\DosageDialog.cpp
src\View\Widgets\DosageDialog.h
src\View\Widgets\DosageDialog.ui
src\View\Widgets\FinancialView.cpp
src\View\Widgets\FinancialView.h
src\View\Widgets\FinancialView.ui
src\View\Widgets\FiscalReceiptDialog.cpp
src\View\Widgets\FiscalReceiptDialog.h
src\View\Widgets\FiscalReceiptDialog.ui
src\View\Widgets\FiscalReportView.cpp
src\View\Widgets\FiscalReportView.h
src\View\Widgets\FiscalReportView.ui
src\View\Widgets\GlobalWidgets.h
src\View\Widgets\InputDialog.cpp
src\View\Widgets\InputDialog.h
src\View\Widgets\InputDialog.ui
src\View\Widgets\InvoicePrintDialog.cpp
src\View\Widgets\InvoicePrintDialog.h
src\View\Widgets\InvoicePrintDialog.ui
src\View\Widgets\ListView.cpp
src\View\Widgets\ListView.h
src\View\Widgets\ListView.ui
src\View\Widgets\LoginView.cpp
src\View\Widgets\LoginView.h
src\View\Widgets\LoginView.ui
src\View\Widgets\MedicalStatusDialog.cpp
src\View\Widgets\MedicalStatusDialog.h
src\View\Widgets\MedicalStatusDialog.ui
src\View\Widgets\MedicationDialog.cpp
src\View\Widgets\MedicationDialog.h
src\View\Widgets\MedicationDialog.ui
src\View\Widgets\MonthNotifView.cpp
src\View\Widgets\MonthNotifView.h
src\View\Widgets\MonthNotifView.ui
src\View\Widgets\MultilineDialog.cpp
src\View\Widgets\MultilineDialog.h
src\View\Widgets\MultilineDialog.ui
src\View\Widgets\PatientFormDialog.cpp
src\View\Widgets\PatientFormDialog.h
src\View\Widgets\PatientFormDialog.ui
src\View\Widgets\PatientSummary.cpp
src\View\Widgets\PatientSummary.h
src\View\Widgets\PatientSummary.ui
src\View\Widgets\PerioStatusView.cpp
src\View\Widgets\PerioStatusView.h
src\View\Widgets\PerioStatusView.ui
src\View\Widgets\PerioView.cpp
src\View\Widgets\PerioView.h
src\View\Widgets\PerioView.ui
src\View\Widgets\PinPromptDialog.cpp
src\View\Widgets\PinPromptDialog.h
src\View\Widgets\PinPromptDialog.ui
src\View\Widgets\PisDialog.cpp
src\View\Widgets\PisDialog.h
src\View\Widgets\PisDialog.ui
src\View\Widgets\PracticeDialog.cpp
src\View\Widgets\PracticeDialog.h
src\View\Widgets\PracticeDialog.ui
src\View\Widgets\PracticeListDialog.cpp
src\View\Widgets\PracticeListDialog.h
src\View\Widgets\PracticeListDialog.ui
src\View\Widgets\PracticeSelectorView.cpp
src\View\Widgets\PracticeSelectorView.h
src\View\Widgets\PracticeSelectorView.ui
src\View\Widgets\PracticeSettings.cpp
src\View\Widgets\PracticeSettings.h
src\View\Widgets\PracticeSettings.ui
src\View\Widgets\PrescriptionView.cpp
src\View\Widgets\PrescriptionView.h
src\View\Widgets\PrescriptionView.ui
src\View\Widgets\ProcedureDialog.cpp
src\View\Widgets\ProcedureDialog.h
src\View\Widgets\ProcedureDialog.ui
src\View\Widgets\ProcedureEditDialog.cpp
src\View\Widgets\ProcedureEditDialog.h
src\View\Widgets\ProcedureEditDialog.ui
src\View\Widgets\ProcedureHistoryDialog.cpp
src\View\Widgets\ProcedureHistoryDialog.h
src\View\Widgets\ProcedureHistoryDialog.ui
src\View\Widgets\ProcedurePrintSelectDialog.cpp
src\View\Widgets\ProcedurePrintSelectDialog.h
src\View\Widgets\ProcedurePrintSelectDialog.ui
src\View\Widgets\RecipientEditView.cpp
src\View\Widgets\RecipientEditView.h
src\View\Widgets\RecipientEditView.ui
src\View\Widgets\ReferralDialog.cpp
src\View\Widgets\ReferralDialog.h
src\View\Widgets\ReferralDialog.ui
src\View\Widgets\ReportDialogResult.h
src\View\Widgets\ReportFilesView.cpp
src\View\Widgets\ReportFilesView.h
src\View\Widgets\ReportFilesView.ui
src\View\Widgets\ReportView.cpp
src\View\Widgets\ReportView.h
src\View\Widgets\ReportView.ui
src\View\Widgets\SaveDialog.cpp
src\View\Widgets\SaveDialog.h
src\View\Widgets\SettingsDialog.cpp
src\View\Widgets\SettingsDialog.h
src\View\Widgets\SettingsDialog.ui
src\View\Widgets\StatisticDialogView.cpp
src\View\Widgets\StatisticDialogView.h
src\View\Widgets\StatisticDialogView.ui
src\View\Widgets\TableViewDialog.cpp
src\View\Widgets\TableViewDialog.h
src\View\Widgets\TableViewDialog.ui
src\View\Widgets\TabView.cpp
src\View\Widgets\TabView.h
src\View\Widgets\TabView.ui
src\View\Widgets\ToothUi.h
src\View\Widgets\UpdateDialog.cpp
src\View\Widgets\UpdateDialog.h
src\View\Widgets\UpdateDialog.ui
src\View\Widgets\UpdateDownloader.cpp
src\View\Widgets\UpdateDownloader.h
src\View\Widgets\UpdateDownloader.ui
src\View\Widgets\UpdatePromptDialog.cpp
src\View\Widgets\UpdatePromptDialog.h
src\View\Widgets\UpdatePromptDialog.ui
src\View\Widgets\WelcomeWidget.cpp
src\View\Widgets\WelcomeWidget.h
src\View\Widgets\WelcomeWidget.ui
)

include_directories(${CMAKE_SOURCE_DIR}/include)
include_directories(${CMAKE_SOURCE_DIR}/src)


add_executable(DinoDent ${SOURCES} resources/Resource.qrc)

#target_compile_features(DinoDent PRIVATE cxx_std_17)

# Qt Libraries
target_link_libraries(DinoDent PRIVATE 
	Qt6::Widgets
	Qt6::Network
	Qt6::Gui
	Qt6::PrintSupport
	Qt6::Core
	Qt6::Core5Compat
	Qt6::Qml

	#LimeReport
	limereport-qt6
	
	#OpenSSL
	libcrypto
	libssl
	
	#XmlSec and LibXml2
	libxml2
	libxmlsec-openssl
	libxmlsec
	
	#PKCS11
	pkcs11
	libp11

	#Static libraries
	JsonCpp
	sqlite3
	TinyXML

)